Close S6878, S1612, S3358, S1186, S6213, S2589, S6885 (20 smells)
S6878 (pattern-match variable -> record pattern): DashboardStatsResponse.from()
becomes a switch over the sealed DashboardStats interface with full record
deconstruction per branch, dropping the now-unreachable "unknown type"
IllegalArgumentException the sealed hierarchy already made dead.

S1612 (lambda -> method reference): three trivial getter lambdas.

S3358 (nested ternary): extracted the list-price currency resolution into a
local variable + if in CreateProductUseCase, UpdateProductUseCase and
ProductRepositoryAdapter.toDomain().

S1186 (empty method with no explanation): a JPA no-arg constructor, a
health-check endpoint, and a test fake's unused override, each given a
one-line comment inside the body -- Sonar wants the comment nested in the
braces, not floating above the declaration.

S6213 (restricted identifier): InventoryMovement.record() -> create() (one
call site updated), a Kafka DLQ lambda's `record` param -> `consumerRecord`.

S2589 (always-false condition): two redundant null checks removed --
Authentication.getAuthorities() never returns null (matching an existing
comment in the same file), neither does
RestClientResponseException.getResponseBodyAsString().

S6885: Math.max/Math.min pairs -> Math.clamp.

Real Sonar re-scan confirms all seven rules at 0, bugs at 0, gate OK,
code_smells 36 -> 16. 634 tests green.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>